# 9-Web-Crawler-Design

./: README.md  db_compose.yml
chojungho/: .gitignore  README.md
chojungho/crawler/: .pre-commit-config.yaml  pyproject.toml
chojungho/crawler/src/: .env.example  container.py  main.py
chojungho/crawler/src/common/: __init__.py  config.py  filter_rule.py  log.py
chojungho/crawler/src/infrastructure/nosql/: redis_client.py
chojungho/crawler/src/infrastructure/rdb/: rdb_postgresql.py
chojungho/crawler/src/infrastructure/schema/: urls.py
chojungho/crawler/src/services/: __init__.py  container.py  redis_utils.py  run.py  sqlalchemy_util.py
chojungho/crawler/src/services/crawling/: __init__.py  html_downloader.py  run_crawling.py  url_filter.py  url_parser.py  worker.py
chojungho/crawler/src/services/uncollected_url_repository/: __init__.py  first_queue.py  run_uncollected_url.py
crawler/: DockerFile  go.mod  go.sum  main.go
crawler/cmd/crawler/: cache.go  crawler.go  db.go  ip.go  makeQueue.go
crawler/config/: config.go
crawler/internal/: base62.go  extractUrl.go  hash.go  ip.go  queue.go  urls.go  util.go
crawler/model/: model.go
data/: .env  db.env
data/db_script/: create.sh
data/nginx/: nginx.conf
funjo/: requirements.txt  run.py
funjo/app/: __init__.py  config.py
funjo/app/api/: crawl.py
suim/go_app/: go.mod  main.go
suim/go_app/config/: config.go  postgres.go  redis.go
suim/go_app/crawler/: domainName.go  robots.go  searchURL.go
suim/go_app/utils/: common.go  file.go  html.go
suim/kafka/: kafka-compose.yaml
(+2 files in other folders)
