[build-system]
build-backend = "poetry.core.masonry.api"
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I", "UP"]
ignore = ["E402", "E501", "F403", "F405"]
# Same as Black.
line-length = 120
per-file-ignores = {}
requires = ["poetry-core"]
# ref: https://beta.ruff.rs/docs/rules/
select = ["B", "C4", "E", "F", "I", "N", "UP", "W"]
# Assume Python 3.11.
target-version = "py311"
unfixable = []

[tool.poetry]
authors = ["jhcho <cho418651@ssrinc.co.kr>"]
description = ""
name = "crawler"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.10.10"
asyncio-redis = "^0.16.0"
asyncpg = "^0.30.0"
black = "^24.10.0"
bs4 = "^0.0.2"
dependency-injector = "^4.43.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^4.0.1"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.6.1"
python = "^3.11"
redis = "^5.2.0"
ruff = "^0.7.3"
scrapy = "^2.11.2"
scrapy-selenium = "^0.0.7"
selenium = "^4.26.1"
sqlalchemy = "^2.0.36"
toml-sort = "^0.23.1"
webdriver-manager = "^4.0.2"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
